Mejorar la clase Coche con métodos de aceleración y actualizar la salida de información sobre los coches. Modificar la clase Estudiante para usar matrícula en lugar de ID y eliminar pruebas no utilizadas.

--- a/poo-t1/coche/Coche.ipynb
+++ b/poo-t1/coche/Coche.ipynb
@@ -2,24 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El coche 1 es un Toyota de color Rojo\n",
-      "El coche 2 es un Ford de color Azul\n"
+      "El coche 1 es un Toyota de color Rojo y va a 120 km/h\n",
+      "El coche 2 es un Ford de color Azul y va a 140 km/h\n",
+      "\n",
+      "El coche 1 es un Toyota de color Rojo y va a 125 km/h\n",
+      "El coche 2 es un Ford de color Azul y va a 145 km/h\n"
      ]
     }
    ],
    "source": [
     "// Definimos la clase (molde)\n",
     "class Coche {\n",
+    "\n",
     "    String marca;\n",
     "    String color;\n",
     "    int velocidad;\n",
+    "\n",
+    "    // Método para acelerar\n",
+    "    public void acelerar() {\n",
+    "        velocidad += 5;\n",
+    "    }\n",
     "}\n",
     "\n",
     "// Creamos objetos de la clase (figuras)\n",
@@ -33,8 +46,19 @@
     "coche2.color = \"Azul\";\n",
     "coche2.velocidad = 140;\n",
     "\n",
-    "System.out.println(\"El coche 1 es un \" + coche1.marca + \" de color \" + coche1.color);\n",
-    "System.out.println(\"El coche 2 es un \" + coche2.marca + \" de color \" + coche2.color);"
+    "System.out.println(\"El coche 1 es un \" + coche1.marca + \" de color \" + coche1.color + \" y va a \"\n",
+    "+ coche1.velocidad + \" km/h\");\n",
+    "System.out.println(\"El coche 2 es un \" + coche2.marca + \" de color \" + coche2.color + \" y va a \"\n",
+    "+ coche2.velocidad + \" km/h\");\n",
+    "\n",
+    "coche1.acelerar();\n",
+    "coche2.acelerar();\n",
+    "System.out.println();\n",
+    "\n",
+    "System.out.println(\"El coche 1 es un \" + coche1.marca + \" de color \" + coche1.color + \" y va a \"\n",
+    "        + coche1.velocidad + \" km/h\");\n",
+    "System.out.println(\"El coche 2 es un \" + coche2.marca + \" de color \" + coche2.color + \" y va a \"\n",
+    "        + coche2.velocidad + \" km/h\");"
    ]
   }
  ],
@@ -48,7 +72,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.26+4-post-Ubuntu-1ubuntu124.04"
   }
